style/login.css
body {
    margin: 0;
    font-family: 'Inter', sans-serif;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: backgroundBlendOut 1.5s forwards;
    z-index: 9999;
}

.overlay .join_logo {
    display: flex;
    justify-content: center;
    align-items: center;
    animation: slideMidToLeft 1.5s forwards;
}

main {
    background-color: #F6F7F8;
    display: flex;
    flex-direction: column;
}

/* sign up header top right */
.sign_up_header {
    width: 280px;
    position: absolute;
    right: 10%;
    top: 67px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 35px;
}

/* sign up header p/text design */
.sign_up_header p {
    margin: 0;
    font-weight: 400;
    font-size: 20px;
}

/* sign up header button design */
.sign_up_header button {
    color: #ffffff;
    background-color: #2A3647;
    padding: 15px 16px;
    border-radius: 8px;
    font-weight: 700;
    font-size: 16px;
    cursor: pointer;
    border: none;
}

.sign_up_header button:hover {
    background-color: #29ABE2;
    box-shadow: 0px 4px 4px 0px #00000040;
}

.sign_up_header button:active {
    background-color: #091931;
    box-shadow: 0px 4px 4px 0px #00000040;
}

/* main design and align / basic background */
main {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* login section align and structure */
.login_section {
    background-color: #ffffff;
    border-radius: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    box-shadow: 0px 0px 14px 3px #0000000A;
    padding: 48px 115px;
    gap: 32px;
}

/* login section header align */
.login_section header {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}


/* login section header h1 style */
.login_section header h1 {
    margin: 0;
    font-weight: 700;
    font-style: bold;
    font-size: 61px;
}


/* login section input group style */
.login_section .input_group {
    display: flex;
    flex-direction: column;
    width: 400px;
    border-radius: 10px;
    gap: 20px;
    margin-bottom: 20px;
}

/* login section input group input style */
.login_section .input_group input {
    width: 100%;
    height: 24px;
    font-size: 20px;
    font-weight: 400;
    padding: 12px 21px;
    outline: 1px solid #d1d1d1;
    border: none;
    border-radius: 10px;
}

/* input focus and placeholder style */
.login_section .input_group input::placeholder {
    color: #d1d1d1;
}

.login_section .input_group input:focus {
    outline: 1px solid #29ABE2;
}

/* input field with icon align */
.login_section .input_group .input_with_icon {
    position: relative;
    display: flex;
    align-items: center;
}

/* position the icon inside the input field */
.input_with_icon .email_icon,
.input_with_icon .password_lock_icon {
    position: absolute;
    left: 358px;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: none;
}

/* login section buttons align */
.login_section .login_buttons {
    display: flex;
    gap: 35px;
}

/* login section login button design incl hover and after click */
.login_section .login_buttons .login_button {
    color: #ffffff;
    background-color: #2A3647;
    padding: 15px 24px;
    border-radius: 8px;
    font-weight: 700;
    font-size: 16px;
    cursor: pointer;
    border: none;
}

.login_section .login_buttons .login_button:hover {
    background-color: #29ABE2;
    box-shadow: 0px 4px 4px 0px #00000040;
}

.login_section .login_buttons .login_button:active {
    background-color: #091931;
    box-shadow: 0px 4px 4px 0px #00000040;
}

/* login section guest login button design */
.login_section .login_buttons .guest_login_button {
    color: #2A3647;
    background-color: #ffffff;
    padding: 15px 24px;
    border-radius: 8px;
    font-weight: 700;
    font-size: 16px;
    border: 2px solid #2A3647;
    cursor: pointer;
}

.login_section .login_buttons .guest_login_button:hover {
    color: #29ABE2;
    border: 2px solid #29ABE2;
    box-shadow: 0px 4px 4px 0px #00000040;
}

.login_section .login_buttons .guest_login_button:active {
    color: #2A3647;
    border: 2px solid #2A3647;
    box-shadow: 0px 4px 4px 0px #00000040;
}

/* main footer design and align */
.main_footer {
    color: #888888;
    position: absolute;
    bottom: 35px;
    text-align: center;
    font-size: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

/* main footer link design */
.main_footer a {
    color: #888888;
    font-size: 16px;
    text-decoration: none;
    padding: 8px;
    cursor: pointer;
}

